welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:16: error: type mismatch;
 found   : Int
 required: Boolean
if ( caseOrange)
     ^